Bug 1799495 - Ensure WaitForShmem has a valid DrawTargetWebgl to access. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D161554